--- a/app/src/main/res/layout/activity_my_portfolio_app.xml
+++ b/app/src/main/res/layout/activity_my_portfolio_app.xml
@@ -27,7 +27,9 @@
         android:id="@+id/button2"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:width="300dp" />
+        android:width="300dp"
+        android:onClick="btn_popularMovies_clicked"
+        />
 
     <Button
         android:layout_width="wrap_content"
@@ -36,7 +38,9 @@
         android:id="@+id/button"
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true"
-        android:width="300dp" />
+        android:width="300dp"
+        android:onClick="btn_stockHawk_clicked"
+        />
 
 
     <Button
@@ -46,7 +50,9 @@
         android:id="@+id/button3"
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
-        android:width="300dp" />
+        android:width="300dp"
+        android:onClick="btn_buildItBigger_clicked"
+        />
 
     <Button
         android:layout_width="wrap_content"
@@ -55,7 +61,9 @@
         android:id="@+id/button4"
         android:layout_below="@+id/button3"
         android:layout_centerHorizontal="true"
-        android:width="300dp" />
+        android:width="300dp"
+        android:onClick="btn_makeAppMaterial_clicked"
+        />
 
     <Button
         android:layout_width="wrap_content"
@@ -64,7 +72,9 @@
         android:id="@+id/button5"
         android:layout_below="@+id/button4"
         android:layout_centerHorizontal="true"
-        android:width="300dp" />
+        android:width="300dp"
+        android:onClick="btn_goUbiquitous_clicked"
+        />
 
     <Button
         android:layout_width="wrap_content"
@@ -73,6 +83,7 @@
         android:id="@+id/button6"
         android:layout_below="@+id/button5"
         android:layout_centerHorizontal="true"
-        android:width="300dp" />
+        android:width="300dp"
+        android:onClick="btn_capstone_clicked"/>
 
 </RelativeLayout>
